--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,6 +28,76 @@
   color: #61dafb;
 }
 
+.rectangle{
+ 
+  height: 60px;
+  width: 600px;
+  background-color: #D3D3D3;
+  color: black;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.head-approved{
+  background-color: rgb(0,153,51);
+  color: black;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.head-pending{
+  background-color: rgb(255,102,0);
+  color: black;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-approved{
+  background-color: rgb(0,153,51);
+  color: black;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-color:  rgb(0,153,51);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-pending{
+  background-color:  rgb(255,102,0);
+  color: black;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-color:   rgb(255,102,0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
