--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -72,7 +72,7 @@
 
 .button-approved{
   background-color: rgb(0,153,51);
-  color: black;
+  color: white;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -81,6 +81,7 @@
   border-color:  rgb(0,153,51);
   display: flex;
   align-items: center;
+  font-size:18px;
   justify-content: center;
 }
 
